<resources>
    <string name="app_name">Covid-19 World Tracker</string>

    <string name="total_cases">Total Cases: %1s</string>
    <string name="critical_cases">Critical Cases: %1s</string>
    <string name="total_deaths">Deaths: </string>
    <string name="total_recovered">Total Recovered: %1s</string>
    <string name="country_code">Country Code</string>
    <string name="country_flag_description">Country Flag</string>
    <string name="country_list_name">Country:</string>
    <string name="totalconfirmed_list">Confirmed:</string>
    <string name="date_list">Date:</string>
    <string name="cases_info" translatable="false">...</string>
    <string name="critical_info">Critical Cases: %1s</string>
    <string name="total_deaths_info">Deaths: %1s</string>
    <string name="total_recovered_info">Recovered: %1s</string>
    <string name="total_deaths_list_info" translatable="false">...</string>

    //Chart Strings
    //pie
    <string name="total_cases_tittle_mixed">%1s Confirmed Cases</string>

    <string name="active_label">Active</string>
    <string name="critical_label">Critical</string>
    <string name="deaths_labes">Deaths</string>
    <string name="recovered_labels">Recovered</string>
    //column
    <string name="confirmed_cases_curve">Confirmed Cases Curve (accumulated)</string>
    <string name="time_label">Time</string>
    <string name="number_of_cases_label">Number of Cases</string>
    //Activities Tittles
    <string name="countryDetails_activity_title">Country Details</string>
    <string name="today_cases">(Today): %1s</string>
    <string name="today_deaths">(Today): %1s</string>
    <string name="chart_total_deaths">Total Deaths (Accumulated)</string>
    <string name="chart_number_of_deaths">Number Of Deaths</string>
    <string name="global_total_recovered">Recovered</string>


    <!--    <string name="222">333</string>-->





</resources>
